--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+
+:root {
+    --slate-300: hsl(212, 45%, 89%);
+    --slate-500: hsl(216, 15%, 48%);
+    --slate-900: hsl(218, 44%, 22%);
+    --white: hsl(0, 0%, 100%);
+}
+
 html {
     box-sizing: border-box;
+    font-size: 62.5%;
 }
 
 body {
     margin: 0;
     min-height: 100vh;
+    font-family: 'Outfit', sans-serif;
+    font-size: 1.5rem;
+    font-weight: 400;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card {
+    width: 32rem;
+    height: 50rem;
+    background: green;
 }
