--- a/css/style.css
+++ b/css/style.css
@@ -18,13 +18,26 @@ body {
     font-family: 'Outfit', sans-serif;
     font-size: 1.5rem;
     font-weight: 400;
+    text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
+    background: var(--slate-300);
 }
 
 .card {
     width: 32rem;
     height: 50rem;
-    background: green;
+    background: var(--white);
+    border-radius: 20px;
+}
+
+.img-container {
+    padding: 1.6rem 1.6rem 0 1.6rem;
+}
+
+.img-container img {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
 }
