--- a/css/style.css
+++ b/css/style.css
@@ -18,11 +18,14 @@ body {
     font-family: 'Outfit', sans-serif;
     font-size: 1.5rem;
     font-weight: 400;
+    line-height: 140%;
+    letter-spacing: 0.2px;
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
     background: var(--slate-300);
+    color: var(--slate-500);
 }
 
 .card {
@@ -40,4 +43,18 @@ body {
     width: 100%;
     height: 100%;
     border-radius: 10px;
+}
+
+.main-content {
+    margin-top: 2.4rem;
+    padding: 0 1.6rem;
+}
+
+.main-content h1 {
+    margin-bottom: 1.6rem;
+    font-size: 2.2rem;
+    font-weight: 700;
+    line-height: 120%;
+    letter-spacing: 0;
+    color: var(--slate-900);
 }
